--- a/duo.html
+++ b/duo.html
@@ -1,1 +1,1 @@
-<meta http-equiv="Refresh" content="0; url='https://conlanglessons.leteralfricativeenjoyer.repl.co'" />
+<meta http-equiv="Refresh" content="0; url='https://conlanglessons.lateralfricativeenjoyer.repl.co'" />
